contact form overflow fix

--- a/styles.css
+++ b/styles.css
@@ -593,6 +593,7 @@ footer{
 .contact-form {
     width: 60%;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     gap: 15px;
     max-width: 500px;
@@ -765,9 +766,12 @@ footer{
     .show-projects-button::after{
         width: 100%;
     }
-        .show-projects-button:hover::after{
-            box-shadow: none;
-            width: 100%;
-            height: 100%;
-        }
+    .show-projects-button:hover::after{
+        box-shadow: none;
+        width: 100%;
+        height: 100%;
+    }
+    .contact-form{
+        width: 90%;
+    }
     }
